--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,21 @@
 <%- include("header.ejs")%>
-<h1 class = "font title">Welcome to the JokeAPI Interface</h1>
+<h1 class="font title">Welcome to the JokeAPI Interface</h1>
 <div class="optionsContainer">
-    <form action="/getJoke" method="get">
-        <input type="submit" value="Get Joke">
-    </form>
-    <form action="/postJoke" method="get">
-        <input type="submit" value="Post Joke">
-    </form>
+  <h2>Here you have a random joke!</h2>
+  <div class="randomJoke">
+    <%if (joke != null){ %>
+    <h3><%= joke%></h3>
+    <%} else {%>
+    <h3>setup: <%= setup%></h3>
+    <h3>delivery: <%= delivery%></h3>
+
+    <%}%>
+  </div>
+  <form action="/getJoke" method="get">
+    <input class="actionButton get" type="submit" value="Custom Joke" />
+  </form>
+  <form action="/postJoke" method="get">
+    <input class="actionButton post" type="submit" value="Create a Joke" />
+  </form>
 </div>
 <%- include("footer.ejs")%>
