--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -58,8 +58,68 @@ body {
     height: 30px;
 }
 
+.checkBoxContainer, .languajeContainer  {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.flags {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-bottom: 15px;
+    flex-wrap: wrap;
+    align-content: center;
+
+}
+
+.checkboxContent, .languajeContent {
+    display: flex;
+    flex-direction: column;
+}
+
+#return {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.customJokeTitle {
+    margin-top: 15px;
+}
+.getJokeBtn {
+    grid-area: 2 / 1 / 3 / 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .jokeContainer {
-    width: 500px;
-    height: 500px;
+    grid-area: 2 / 1 / 3/ 3;
+    width: 80%;
+    height: 100%;
+    margin-left: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     background-color: white;
+    border-radius: 20px;
+}
+
+.jokeContent {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.formContainer {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 350px 450px;
+}
+.customJokeForm {
+    grid-area: 1 / 1 / 2 / 3;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 250px 100px;
 }
